# doudian-client

./: .env  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/app/: menu.rs
src/api/: index.ts
src/plugins/: assets.ts  index.ts  scrollbarStyle.ts  vexTable.ts
src/router/: index.ts
src/store/modules/app/: helper.ts  index.ts
src/utils/storage/: index.ts
src/views/exception/404/: index.vue
src/views/exception/500/: index.vue
src/views/home/: index.vue
src/views/setting/: index.vue
